Fix :  alignment for  avatar and close icon.

--- a/src/toastify.css
+++ b/src/toastify.css
@@ -21,6 +21,8 @@
     text-decoration: none;
     max-width: calc(50% - 20px);
     z-index: 2147483647;
+    display: flex;
+    align-items: center;
 }
 
 .toastify.on {
@@ -29,7 +31,7 @@
 
 .toast-close {
     opacity: 0.4;
-    padding: 0 5px;
+    padding: 8px;
 }
 
 .toastify-right {
@@ -53,10 +55,10 @@
 }
 
 .toastify-avatar {
-    width: 1.5em;
-    height: 1.5em;
-    margin: -7px 5px;
-    border-radius: 2px;
+    width: 2em;
+    height: 2em;
+    margin: 0 8px;
+    border-radius: 4px;
 }
 
 .toastify-center {
@@ -69,7 +71,8 @@
 }
 
 @media only screen and (max-width: 360px) {
-    .toastify-right, .toastify-left {
+    .toastify-right,
+    .toastify-left {
         margin-left: auto;
         margin-right: auto;
         left: 0;
